--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.16.0",
     "lint-staged": "^11.1.2",
+    "path": "^0.12.7",
     "stylus": "^0.54.8",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
