--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.16.0",
     "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1",
     "lint-staged": "^11.1.2",
     "path": "^0.12.7",
